# dynlock

./: .gitignore  Cargo.toml  Makefile  README.md  default-config.yaml
.github/: build-linux.sh  install-linux.sh
.github/workflows/: rust.yml
dynlock/: Cargo.toml  build.rs
dynlock/src/: event.rs  lock.rs  main.rs
dynlock/src/graphics/: state.rs  style.rs  ui.rs
dynlock/src/shaders/: error.glsl
dynlock_lib/: Cargo.toml
dynlock_lib/src/: cli.rs
scripts/: hyprland.config  sway.config  test.sh
shaders/: checkers.glsl  crt.glsl  disolve.glsl  dvd.glsl  frost.glsl  matrix.glsl  oil.glsl  orb.glsl  overlay.glsl  paper_burn.glsl  rain.glsl  sea.glsl  shader-old.frag  shader-old2.frag  shader.frag  shader.vert  speakers.glsl  strings.glsl
src/: config.rs  event.rs  lock.rs  main.rs  pid.rs  wgpu.rs  wgpu_old.rs
src/graphics/: inner.rs  mod.rs  screenshot.rs  state.rs  style.rs  ui.rs
src/shaders/: error.glsl
