[package]
name = "shaderlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
calloop = { version = "0.13.0" }
env_logger = "0.11.2"
futures-intrusive = "0.5.0"
iced_runtime = "0.12.1"
iced_wgpu = { version = "0.12.1", features = ["image"] }
iced_widget = { version = "0.12.3", features = ["image"] }
image = { version = "0.24.9", features = ["png", "jpeg"], default-features = false }
libwayshot = "0.3.0"
log = "0.4.21"
pam = "0.8.0"
pollster = "0.3.0"
raw-window-handle = "0.6.1"
shaderc = "0.8.3"
smol_str = "0.2.1"
wayland-backend = { version = "0.3.3", features = ["client_system"] }
wayland-client = { version = "0.31.2" }
wgpu = { version = "0.19.3", features = ["spirv"] }
whoami = "1.5.1"

[dependencies.smithay-client-toolkit]
git = "https://github.com/Smithay/client-toolkit"
version = "0.18.0"
